# calculator

./: .gitignore  Calculator.pro  Main.hs  eval_stub.h  hcalc.cabal  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.bat  ui_mainwindow.h
eval/: eval.cabal  hcalc.cabal
eval/csrc/: StartEnd.c
eval/src/: Eval.hs
eval/src/Eval/: Parse.hs
src/Eval/: AST.hs
