name:                hcalc
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Gabriel Anderosn
maintainer:          gabe4k@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hcalc
  main-is:             Main.hs
  -- other-modules:    
  -- other-extensions: 
  build-depends:       base,
                       megaparsec,
                       parser-combinators,
                       text
                       
                
-- hs-source-dirs:    
default-language: Haskell2010